NOJIRA Code cleanup (literals first)